--- a/projects/ng-select/src/lib/select.component.html
+++ b/projects/ng-select/src/lib/select.component.html
@@ -1,54 +1,64 @@
-<label
-    *ngIf="label !== ''">
-    {{label}}
+<label *ngIf="label !== ''">
+    {{ label }}
 </label>
 <div
     #selection
     [attr.tabindex]="disabled ? null : 0"
-    [ngClass]="{'open': isOpen, 'focus': hasFocus, 'below': isBelow, 'above': !isBelow, 'disabled': disabled}"
+    [ngClass]="{
+        open: isOpen,
+        focus: hasFocus,
+        below: isBelow,
+        above: !isBelow,
+        disabled: disabled
+    }"
     (click)="onSelectContainerClick($event)"
     (focus)="onSelectContainerFocus()"
-    (keydown)="onSelectContainerKeydown($event)">
-
-    <div class="single"
-        *ngIf="!multiple">
-        <div class="value"
-            *ngIf="optionList.hasSelected">
-            <ng-container *ngTemplateOutlet="optionTemplate; context:{option: optionList.selection[0].wrappedOption, onDeselectOptionClick: onDeselectOptionClick}"></ng-container>
-            <span *ngIf="!optionTemplate">{{optionList.selection[0].label}}</span>
+    (keydown)="onSelectContainerKeydown($event)"
+>
+    <div class="single" *ngIf="!multiple">
+        <div class="value" *ngIf="optionList.hasSelected">
+            <ng-container
+                *ngTemplateOutlet="
+                    optionTemplate;
+                    context: {
+                        option: optionList.selection[0].wrappedOption,
+                        onDeselectOptionClick: onDeselectOptionClick
+                    }
+                "
+            ></ng-container>
+            <span *ngIf="!optionTemplate">{{
+                optionList.selection[0].label
+            }}</span>
         </div>
-        <div class="placeholder"
-            *ngIf="!optionList.hasSelected">
-            {{placeholderView}}
+        <div class="placeholder" *ngIf="!optionList.hasSelected">
+            {{ placeholderView }}
         </div>
-        <div class="clear"
+        <div
+            class="clear"
             *ngIf="allowClear && optionList.hasSelected"
-            (click)="onClearSelectionClick($event)">
+            (click)="onClearSelectionClick($event)"
+        >
             &#x2715;
         </div>
-        <div class="toggle"
-            *ngIf="isOpen">
-            &#x25B2;
-        </div>
-        <div class="toggle"
-            *ngIf="!isOpen">
-            &#x25BC;
-        </div>
+        <div class="toggle" *ngIf="isOpen">&#x25B2;</div>
+        <div class="toggle" *ngIf="!isOpen">&#x25BC;</div>
     </div>
 
-    <div class="multiple"
-        *ngIf="multiple">
-        <div class="option"
-            *ngFor="let option of optionList.selection">
-            <span class="deselect-option"
-                (click)=onDeselectOptionClick(option)>
+    <div class="multiple" *ngIf="multiple">
+        <div class="option" *ngFor="let option of optionList.selection">
+            <span
+                class="deselect-option"
+                (click)="onDeselectOptionClick(option)"
+            >
                 &#x2715;
             </span>
-            {{option.label}}
+            {{ option.label }}
         </div>
-        <div class="placeholder"
-            *ngIf="!filterEnabled && !optionList.hasSelected">
-            {{placeholderView}}
+        <div
+            class="placeholder"
+            *ngIf="!filterEnabled && !optionList.hasSelected"
+        >
+            {{ placeholderView }}
         </div>
         <input
             *ngIf="filterEnabled"
@@ -56,12 +66,12 @@
             autocomplete="off"
             tabindex="-1"
             [placeholder]="placeholderView"
-            [ngStyle]="{'width.px': filterInputWidth}"
-            (input)="onFilterInput($event.target.value)"
+            [ngStyle]="{ 'width.px': filterInputWidth }"
+            (input)="onFilterInput($any($event.target).value)"
             (keydown)="onMultipleFilterKeydown($event)"
-            (focus)="onMultipleFilterFocus()"/>
+            (focus)="onMultipleFilterFocus()"
+        />
     </div>
-
 </div>
 <select-dropdown
     *ngIf="isOpen"
@@ -83,5 +93,6 @@
     (singleFilterClick)="onSingleFilterClick()"
     (singleFilterFocus)="onSingleFilterFocus()"
     (singleFilterInput)="onFilterInput($event)"
-    (singleFilterKeydown)="onSingleFilterKeydown($event)">
+    (singleFilterKeydown)="onSingleFilterKeydown($event)"
+>
 </select-dropdown>
