--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -1,20 +1,22 @@
-@import './variables';
+@import "./variables";
 
-html, body, ng-select-app {
-  margin: 0;
-  width: 100%;
-  height: 100%;
+html,
+body,
+ng-select-app {
+    margin: 0;
+    width: 100%;
+    height: 100%;
 }
 
 html {
-  box-sizing: border-box;
-  font-size: $font-size-base;
+    box-sizing: border-box;
+    font-size: $font-size-base;
 }
 
 *,
 *:before,
 *:after {
-  box-sizing: inherit;
+    box-sizing: inherit;
 }
 
 body {
@@ -28,6 +30,6 @@ p {
 }
 
 a {
-    color: mat-color($mat-blue, 800);
+    color: $mat-blue-800;
     text-decoration: none;
 }
