--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,3 @@
-@import '~normalize.css/normalize.css';
-@import '~famfamfam-flags/dist/sprite/famfamfam-flags.min.css';
-@import '../lib/highlight/styles/color-brewer.css';
+@import "normalize.css/normalize.css";
+@import "famfamfam-flags/dist/sprite/famfamfam-flags.min.css";
+@import "../lib/highlight/styles/color-brewer.css";
